--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "timprojekt/json-db",
-    "require": {
+    "require-dev": {
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
@@ -9,12 +9,17 @@
         ]
     },
     "scripts": {
-        "test": "php vendor/bin/phpunit tests"
+        "test": "php vendor/bin/phpunit tests",
+        "start-server": "screen -dmS json-db php server/server.php"
     },
     "authors": [
         {
             "name": "TimAnthonyAlexander",
             "email": "github@timanthonyalexander.de"
         }
-    ]
+    ],
+    "require": {
+        "ext-curl": "*",
+        "ext-mbstring": "*"
+    }
 }
